# pdf-tester

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/pdf_tester/: cli.py  models.py  runner.py
src/pdf_tester/tests/: __init__.py  base.py  test_structure.py
