[project]
name = "pdf-tester"
version = "0.0.1"
description = "PDF validation and testing tool"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.0",
]

[project.scripts]
pdf-tester = "pdf_tester.cli:app"

[tool.setuptools.packages.find]
where = ["src"]